@@ -1,3 +1,9 @@
+2010-07-07  Jakub Jelinek  <jakub@redhat.com>
+
+	* lto-elf.c (ELFOSABI_NONE, ELFOSABI_LINUX): Define if not defined.
+	(validate_file): Allow merging of ELFOSABI_NONE with ELFOSABI_LINUX
+	objects.
+
 2010-06-24  Steven Bosscher  <steven@gcc.gnu.org>
 
 	Backport from mainline:
